# mypersonalfinance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_DOCUMENTATION.md  CLAUDE.md  README.md  WARP.md  config.py  env-sample  load-cc-transactions.py  load-excel-transactions.py  load-transactions.py  pre-existing-excel.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.pi/: settings.json
classes/: config.py  database.py  finance_db.py
classes/cc/: amex.py  bmo.py  canadian_tire.py  card_registry.py  cc_merchant_category_ref.py  cibc_mc.py  rbc_cc.py  ref_data.py  rogers.py  simplii_debit.py  simplii_visa.py  td_debit.py  td_visa.py  wealthsimple.py  wealthsimple_credit.py  wealthsimple_debit.py
classes/cc/generics/: credit_card_statement.py  (+2 more)
classes/db/: my_finance_db.py  parents_finance_db.py
cli/: transaction_loader_cli.py
cron/: crontab
db/: base.py  finance_base.py  my_finance.py  parents_finance.py
ddl/: categories.sql  databases.sql  expenses.sql
ddl/finance/: expenses.sql  merchant_name_auto_match.sql  subcategories.sql  substring_auto_match.sql
ddl/parents_finance/: auto_match.sql  categories.sql  expenses.sql  substring_auto_match.sql
scripts/: test_simplefin.py
services/: transaction_loader.py  transaction_processor.py
sources/: base.py  ref_data.py  registry.py
sources/api/: simplefin.py  wealthsimple_credit.py  wealthsimple_debit.py
sources/csv/: amex.py  bmo.py  canadian_tire.py  cibc_mc.py  rbc_cc.py  rogers.py  simplii_debit.py  simplii_visa.py  td_debit.py  td_visa.py
utils/: processing_results.py
(+2 files in other folders)
